test/org/midica/testfiles/failing/eff-func-pitch-gt-range.midica
INCLUDE inc/instruments.midica

0: pitch_range.set(2.0)
0: pitch.wait.set(2.3)
